# bloom-proof-challenge

./: .gitignore  README.md  app.py  pyproject.toml
api/: __init__.py
api/main/: __init__.py  bloom_filter.py  bloom_filter_manager.py  endpoints.py
static/css/: styles.css
templates/: index.html.jinja
